Commit parcial views blade

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ APP_KEY=base64:FajA0yxRxxD5v8/UxLEgk2Ln2hqJV4rm29g7ucH1GlM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=pt-br
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
