--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="TODO Laravel"
 APP_ENV=local
-APP_KEY=base64:FajA0yxRxxD5v8/UxLEgk2Ln2hqJV4rm29g7ucH1GlM=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
