Cadastro de Tarefas e relacionamento entre usuario e tarefa

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 APP_NAME="TODO Laravel"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:FajA0yxRxxD5v8/UxLEgk2Ln2hqJV4rm29g7ucH1GlM=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=pt-br
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=pt_BR
+APP_FAKER_LOCALE=pt_BR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
